# fender-platform-exercise

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/api/: deps.py  main.py
app/api/login/: models.py  router.py  schemas.py  service.py
app/api/users/: models.py  router.py  schemas.py  service.py
app/core/: auth.py  config.py  db.py
app/tests/: conftest.py
app/tests/integration/: conftest.py  test_integration.py
app/tests/unit/: conftest.py  test_unit.py
scripts/: cleanup.sh  test.sh
